de/15.4/config/index.rst
|Fess| Konfigurationsleitfaden
================================

Ein umfassender Leitfaden zur Konfiguration von |Fess|. Jeder Abschnitt ist nach Zweck organisiert.

.. toctree::
   :maxdepth: 2
   :caption: Erste Schritte

   intro

.. toctree::
   :maxdepth: 2
   :caption: Grundkonfiguration

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: Crawler-Konfiguration

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: Suchfunktionen-Konfiguration

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration

.. toctree::
   :maxdepth: 2
   :caption: Sicherheitskonfiguration

   security-role
   security-virtual-host

.. toctree::
   :maxdepth: 2
   :caption: SSO-Konfiguration

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: Systemverwaltung

   admin-logging
   admin-index-backup
   admin-analyzer
   admin-opensearch-dashboards
